--- a/src/components/ArrowCard.astro
+++ b/src/components/ArrowCard.astro
@@ -1,21 +1,21 @@
 ---
-import type { CollectionEntry } from 'astro:content';
-import { Icon } from 'astro-icon/components';
-import Link from './Link.astro';
+import type { CollectionEntry } from 'astro:content'
+import { Icon } from 'astro-icon/components'
+import Link from './Link.astro'
 
 type Props = {
-  entry: CollectionEntry<'blog'> | CollectionEntry<'projects'>;
-  context: 'blog' | 'projects';
+  entry: CollectionEntry<'blog'> | CollectionEntry<'projects'>
+  context: 'blog' | 'projects'
 }
 
-const { entry, context } = Astro.props;
-const title = entry.data.type === 'project' && context === 'blog' ? entry.data.blogTitle : entry.data.title;
-const defaultIconName = context === 'blog' ? 'content-blog' : 'content-project';
+const { entry, context } = Astro.props
+const title = entry.data.type === 'project' && context === 'blog' ? entry.data.blogTitle : entry.data.title
+const defaultIconName = context === 'blog' ? 'content-blog' : 'content-project'
 const iconName = entry.data.thumbnail || defaultIconName;
 ---
 
-<Link 
-  href={`/${entry.collection}/${entry.slug}`} 
+<Link
+  href={`/${entry.collection}/${entry.slug}`}
   class="relative group flex items-center flex-nowrap py-3 px-4 pr-10 rounded-lg border border-base-content/25 bg-transparent hover:bg-neutral text-base-content duration-200 ease-in-out"
   underline={false}
 >
@@ -28,10 +28,11 @@ const iconName = entry.data.thumbnail || defaultIconName;
       {entry.data.description}
     </div>
   </div>
-  <svg 
-    xmlns="http://www.w3.org/2000/svg" 
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 24 24"
-    class="absolute top-1/2 right-2 -translate-y-1/2 size-5 stroke-2 fill-none stroke-current group-hover:stroke-primary transition-colors duration-300 ease-in-out">
+    class="absolute top-1/2 right-2 -translate-y-1/2 size-5 stroke-2 fill-none stroke-current group-hover:stroke-primary transition-colors duration-300 ease-in-out"
+  >
     <line x1="5" y1="12" x2="19" y2="12" class="translate-x-3 group-hover:translate-x-0 scale-x-0 group-hover:scale-x-100 transition-transform duration-300 ease-in-out" />
     <polyline points="12 5 19 12 12 19" class="-translate-x-1 group-hover:translate-x-0 transition-transform duration-300 ease-in-out" />
   </svg>
