--- a/src/components/CollectionPageStructuredData.astro
+++ b/src/components/CollectionPageStructuredData.astro
@@ -1,14 +1,14 @@
 ---
-import { SITE } from '@consts';
+import { SITE } from '@consts'
 
 interface Props {
-  type: 'BlogPosting' | 'Article';
-  name: string;
-  description: string;
+  type: 'BlogPosting' | 'Article'
+  name: string
+  description: string
 }
 
-const { type, name, description } = Astro.props;
-const pageUrl = new URL(Astro.url.pathname, Astro.site);
+const { type, name, description } = Astro.props
+const pageUrl = new URL(Astro.url.pathname, Astro.site)
 
 const structuredData = {
   '@context': 'https://schema.org',
