--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,25 +1,25 @@
 ---
-import '../global.css';
-import { ViewTransitions } from 'astro:transitions';
-import { AstroFont } from 'astro-font';
-import { SEO } from 'astro-seo';
-import { getImagePath } from 'astro-opengraph-images';
-import { SITE } from '@consts';
-import { formatDateForOpenGraph } from '@lib/utils';
+import { SITE } from '@consts'
+import { formatDateForOpenGraph } from '@lib/utils'
+import { ViewTransitions } from 'astro:transitions'
+import { AstroFont } from 'astro-font'
+import { getImagePath } from 'astro-opengraph-images'
+import { SEO } from 'astro-seo'
+import '../global.css'
 
 interface Props {
-  title: string;
-  description: string;
-  image?: string;
-  type?: 'website' | 'article';
-  publishedTime?: string;
-  tags?: string[];
+  title: string
+  description: string
+  image?: string
+  type?: 'website' | 'article'
+  publishedTime?: string
+  tags?: string[]
 }
 
-const { title, description, image, type = 'website', publishedTime, tags = [] } = Astro.props;
-const openGraphImageUrl = image || getImagePath({ url: Astro.url, site: Astro.site });
-const defaultTags = ['chippledipple', 'fractal', 'county', 'art', 'gamedev'];
-const combinedTags = Array.from(new Set([...tags, ...defaultTags]));
+const { title, description, image, type = 'website', publishedTime, tags = [] } = Astro.props
+const openGraphImageUrl = image || getImagePath({ url: Astro.url, site: Astro.site })
+const defaultTags = ['chippledipple', 'fractal', 'county', 'art', 'gamedev']
+const combinedTags = Array.from(new Set([...tags, ...defaultTags]))
 const tagsContent = combinedTags.join(', ');
 ---
 
@@ -29,16 +29,16 @@ const tagsContent = combinedTags.join(', ');
   titleTemplate={`${SITE.NAME} | %s`}
   titleDefault={SITE.NAME}
   description={description}
-  charset='utf-8'
+  charset="utf-8"
   openGraph={{
     basic: {
-      title: title,
-      type: type,
+      title,
+      type,
       image: openGraphImageUrl,
       url: Astro.url.href,
     },
     optional: {
-      description: description,
+      description,
       locale: 'en_US',
       siteName: SITE.NAME,
     },
@@ -54,18 +54,18 @@ const tagsContent = combinedTags.join(', ');
       article: {
         publishedTime: formatDateForOpenGraph(publishedTime),
         authors: [SITE.AUTHOR],
-        tags: combinedTags
-      }
-    })
+        tags: combinedTags,
+      },
+    }),
   }}
   twitter={{
     card: 'summary_large_image',
     site: '@fractalcounty',
     creator: '@fractalcounty',
-    title: title,
+    title,
     image: openGraphImageUrl,
     imageAlt: `White text on a black background that says ${SITE.NAME} followed by ${title}`,
-    description: description,
+    description,
   }}
   extend={{
     link: [
@@ -73,43 +73,43 @@ const tagsContent = combinedTags.join(', ');
         rel: 'icon',
         type: 'image/svg+xml',
         href: '/favicon-dark.svg',
-        media: '(prefers-color-scheme: dark)'
+        media: '(prefers-color-scheme: dark)',
       },
       {
         rel: 'icon',
         type: 'image/svg+xml',
         href: '/favicon-light.svg',
-        media: '(prefers-color-scheme: light)'
+        media: '(prefers-color-scheme: light)',
       },
       {
         rel: 'icon',
         type: 'image/x-icon',
-        href: '/favicon-light.svg'
-      }
+        href: '/favicon-light.svg',
+      },
     ],
     meta: [
       {
         name: 'viewport',
-        content: 'width=device-width,initial-scale=1'
+        content: 'width=device-width,initial-scale=1',
       },
       {
         name: 'generator',
-        content: Astro.generator
+        content: Astro.generator,
       },
       {
         name: 'keywords',
-        content: tagsContent
+        content: tagsContent,
       },
       {
         name: 'author',
-        content: SITE.AUTHOR
-      }
-    ]
+        content: SITE.AUTHOR,
+      },
+    ],
   }}
 />
 
 <AstroFont
-config={[
+  config={[
   {
     name: 'AlteHaasGrotesk',
     src: [
@@ -206,88 +206,88 @@ config={[
     display: 'swap',
     selector: 'code',
     fallback: 'monospace',
-  }
+  },
 ]}
 />
 
-<ViewTransitions  />
+<ViewTransitions />
 <script>
-  import type { TransitionBeforeSwapEvent } from 'astro:transitions/client';
-  document.addEventListener('astro:before-swap', (e) =>
-    [
-      ...(e as TransitionBeforeSwapEvent).newDocument.head.querySelectorAll(
-        'link[as="font"]'
-      ),
-    ].forEach((link) => link.remove())
-  );
+import type { TransitionBeforeSwapEvent } from 'astro:transitions/client'
+
+document.addEventListener('astro:before-swap', e =>
+  [
+    ...(e as TransitionBeforeSwapEvent).newDocument.head.querySelectorAll(
+      'link[as="font"]',
+    ),
+  ].forEach(link => link.remove()))
 </script>
 
 <script is:inline>
-
-  function getTheme() {
-    if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
-      return localStorage.getItem('theme');
-    }
-    return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+function getTheme() {
+  if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
+    return localStorage.getItem('theme')
   }
+  return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light'
+}
 
-  function setTheme(theme) {
-    document.documentElement.setAttribute('data-theme', theme === 'dark' ? 'laramie' : 'casper');
-    localStorage.setItem('theme', theme);
+function setTheme(theme) {
+  document.documentElement.setAttribute('data-theme', theme === 'dark' ? 'laramie' : 'casper')
+  localStorage.setItem('theme', theme)
+}
+
+function updateTheme() {
+  const theme = getTheme()
+  setTheme(theme)
+}
+
+updateTheme()
+
+window.addEventListener('storage', (event) => {
+  if (event.key === 'theme') {
+    updateTheme()
   }
+})
 
-  function updateTheme() {
-    const theme = getTheme();
-    setTheme(theme);
+function init() {
+  onScroll()
+  animate()
+
+  const backToTop = document.getElementById('back-to-top')
+  backToTop?.addEventListener('click', event => scrollToTop(event))
+
+  const backToPrev = document.getElementById('back-to-prev')
+  backToPrev?.addEventListener('click', () => window.history.back())
+
+  document.addEventListener('scroll', onScroll)
+}
+
+function animate() {
+  const animateElements = document.querySelectorAll('.animate')
+
+  animateElements.forEach((element, index) => {
+    setTimeout(() => {
+      element.classList.add('show')
+    }, index * 150)
+  })
+}
+
+function onScroll() {
+  if (window.scrollY > 0) {
+    document.documentElement.classList.add('scrolled')
   }
-
-  updateTheme();
-
-  window.addEventListener('storage', (event) => {
-    if (event.key === 'theme') {
-      updateTheme();
-    }
-  });
-  
-  function init() {
-    onScroll();
-    animate();
-
-    const backToTop = document.getElementById('back-to-top');
-    backToTop?.addEventListener('click', (event) => scrollToTop(event));
-
-    const backToPrev = document.getElementById('back-to-prev');
-    backToPrev?.addEventListener('click', () => window.history.back());
-
-    document.addEventListener('scroll', onScroll);
+  else {
+    document.documentElement.classList.remove('scrolled')
   }
+}
 
-  function animate() {
-    const animateElements = document.querySelectorAll('.animate');
+function scrollToTop(event) {
+  event.preventDefault()
+  window.scrollTo({
+    top: 0,
+    behavior: 'smooth',
+  })
+}
 
-    animateElements.forEach((element, index) => {
-      setTimeout(() => {
-        element.classList.add('show');
-      }, index * 150);
-    });
-  }
-
-  function onScroll() {
-    if (window.scrollY > 0) {
-      document.documentElement.classList.add('scrolled');
-    } else {
-      document.documentElement.classList.remove('scrolled');
-    }
-  }
-
-  function scrollToTop(event) {
-    event.preventDefault();
-    window.scrollTo({
-      top: 0,
-      behavior: 'smooth'
-    });
-  }
-
-  document.addEventListener('DOMContentLoaded', () => init());
-  document.addEventListener('astro:after-swap', () => init());
+document.addEventListener('DOMContentLoaded', () => init())
+document.addEventListener('astro:after-swap', () => init())
 </script>
