--- a/src/components/ImageCard.astro
+++ b/src/components/ImageCard.astro
@@ -1,38 +1,39 @@
 ---
-import type { ImageMetadata } from 'astro';
-import { Image } from 'astro:assets';
+import type { ImageMetadata } from 'astro'
+import { Image } from 'astro:assets'
 
 interface Props {
-   imagePath: string;
-   altText: string;
-   class?: string;
-   imageClass?: string;
-   showShadow?: boolean;
-   rounded?: boolean;
-   showCaption?: boolean;
-   scale?: number;
+   imagePath: string
+   altText: string
+   class?: string
+   imageClass?: string
+   showShadow?: boolean
+   rounded?: boolean
+   showCaption?: boolean
+   scale?: number
 }
 
-const { 
-    imagePath, 
-    altText, 
-    class: className, 
+const {
+    imagePath,
+    altText,
+    class: className,
     imageClass = '',
-    showShadow = true, 
-    rounded = true, 
+    showShadow = true,
+    rounded = true,
     showCaption = true,
-    scale = 1
-} = Astro.props;
+    scale = 1,
+} = Astro.props
 
-const images = import.meta.glob<{ default: ImageMetadata }>('/src/content/projects/**/*.{jpeg,jpg,png,gif,webp}');
-if (!images[imagePath]) throw new Error(`"${imagePath}" does not exist in glob: "src/content/projects/**/*.{jpeg,jpg,png,gif,webp}"`);
+const images = import.meta.glob<{ default: ImageMetadata }>('/src/content/projects/**/*.{jpeg,jpg,png,gif,webp}')
+if (!images[imagePath])
+throw new Error(`"${imagePath}" does not exist in glob: "src/content/projects/**/*.{jpeg,jpg,png,gif,webp}"`);
 ---
 <div class={`custom-image-card-wrapper ${className || ''}`} style={`--scale-factor: ${scale};`}>
     <figure class="custom-image-card prose">
-        <Image 
-            src={images[imagePath]()} 
-            alt={altText} 
-            class={`mx-auto my-auto ${rounded ? 'rounded-3xl' : ''} ${showShadow ? 'shadow-xl' : ''} ${imageClass}`}
+        <Image
+          src={images[imagePath]()}
+          alt={altText}
+          class={`mx-auto my-auto ${rounded ? 'rounded-3xl' : ''} ${showShadow ? 'shadow-xl' : ''} ${imageClass}`}
         />
         {showCaption && (
             <figcaption class="custom-image-card-caption">
