--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -1,7 +1,7 @@
 ---
 export interface Props {
-  href: string;
-  label: string;
+  href: string
+  label: string
 }
 
 const { href, label } = Astro.props;
