chore: remove ignored files from git cache

--- a/src/components/meta/Head.astro
+++ b/src/components/meta/Head.astro
@@ -5,7 +5,7 @@ import { ViewTransitions } from 'astro:transitions'
 import { AstroFont } from 'astro-font'
 import { getImagePath } from 'astro-opengraph-images'
 import { SEO } from 'astro-seo'
-import '../global.css'
+import '@/global.css'
 
 interface Props {
   title: string
