--- a/src/components/ui/ArrowCard.astro
+++ b/src/components/ui/ArrowCard.astro
@@ -1,7 +1,7 @@
 ---
 import type { CollectionEntry } from 'astro:content'
+import Link from '@/components/Link.astro'
 import { Icon } from 'astro-icon/components'
-import Link from './Link.astro'
 
 type Props = {
   entry: CollectionEntry<'blog'> | CollectionEntry<'projects'>
@@ -19,7 +19,11 @@ const iconName = entry.data.thumbnail || defaultIconName;
   class="relative group flex items-center flex-nowrap py-3 px-4 pr-10 rounded-lg border border-base-content/25 bg-transparent hover:bg-neutral text-base-content duration-200 ease-in-out"
   underline={false}
 >
+
+  <!-- Icon -->
   <Icon name={iconName} class="size-6 mr-3 flex-shrink-0" />
+
+  <!-- Title and description -->
   <div class="flex flex-col flex-1 truncate">
     <div class="font-semibold group-hover:text-primary">
       {title}
@@ -28,6 +32,8 @@ const iconName = entry.data.thumbnail || defaultIconName;
       {entry.data.description}
     </div>
   </div>
+
+  <!-- Arrow icon -->
   <svg
     xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 24 24"
