--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,9 +1,9 @@
 ---
+import Container from '@/components/layout/Container.astro'
 import CollectionPageStructuredData from '@/components/meta/CollectionPageStructuredData.astro'
-import ArrowCard from '@components/ArrowCard.astro'
-import Container from '@components/Container.astro'
-import { PROJECTS } from '@consts'
-import PageLayout from '@layouts/PageLayout.astro'
+import ArrowCard from '@/components/ui/ArrowCard.astro'
+import { PROJECTS } from '@/consts'
+import PageLayout from '@/layouts/PageLayout.astro'
 import { getCollection } from 'astro:content'
 
 const projects = (await getCollection('projects'))
