--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,8 +1,8 @@
 ---
-import Button from '@components/Button.astro'
-import Container from '@components/Container.astro'
-import Link from '@components/Link.astro'
-import { SITE } from '@consts'
+import Button from '@/components/Button.astro'
+import Container from '@/components/layout/Container.astro'
+import Link from '@/components/Link.astro'
+import { SITE } from '@/consts'
 import { Icon } from 'astro-icon/components';
 ---
 
