--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,7 +1,7 @@
 ---
-import Footer from '@components/Footer.astro'
-import Head from '@components/Head.astro'
-import Header from '@components/Header.astro'
+import Footer from '@/components/layout/Footer.astro'
+import Header from '@/components/layout/Header.astro'
+import Head from '@/components/meta/Head.astro'
 
 type Props = {
   title: string
