--- a/src/pages/art/[...slug].astro
+++ b/src/pages/art/[...slug].astro
@@ -1,10 +1,9 @@
 ---
-import ArtworkStructuredData from '@/components/meta/ArtworkStructuredData.astro'
+import BackToPrev from '@/components/BackToPrev.astro'
+import FormattedDate from '@/components/FormattedDate.astro'
+import Container from '@/components/layout/Container.astro'
 import WebcomicViewer from '@/components/WebcomicViewer.astro'
-import BackToPrev from '@components/BackToPrev.astro'
-import Container from '@components/Container.astro'
-import FormattedDate from '@components/FormattedDate.astro'
-import PageLayout from '@layouts/PageLayout.astro'
+import PageLayout from '@/layouts/PageLayout.astro'
 import { Image } from 'astro:assets'
 import { type CollectionEntry, getCollection } from 'astro:content'
 
@@ -42,7 +41,6 @@ const firstImage = Array.isArray(artwork.data.images)
     slot="head"
   />
 
-  <ArtworkStructuredData slot="structured-data" artwork={artwork} />
   <Container>
     <div class="animate">
       <BackToPrev href="/art">
