--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,10 +1,10 @@
 ---
+import BackToPrev from '@/components/BackToPrev.astro'
+import FormattedDate from '@/components/FormattedDate.astro'
+import Container from '@/components/layout/Container.astro'
 import PostStructuredData from '@/components/meta/PostStructuredData.astro'
-import BackToPrev from '@components/BackToPrev.astro'
-import Container from '@components/Container.astro'
-import FormattedDate from '@components/FormattedDate.astro'
-import PageLayout from '@layouts/PageLayout.astro'
-import { readingTime } from '@lib/utils'
+import PageLayout from '@/layouts/PageLayout.astro'
+import { readingTime } from '@/lib/utils'
 import { type CollectionEntry, getCollection } from 'astro:content'
 
 export async function getStaticPaths() {
