--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,9 +1,9 @@
 ---
+import Container from '@/components/layout/Container.astro'
 import CollectionPageStructuredData from '@/components/meta/CollectionPageStructuredData.astro'
-import ArrowCard from '@components/ArrowCard.astro'
-import Container from '@components/Container.astro'
-import { BLOG } from '@consts'
-import PageLayout from '@layouts/PageLayout.astro'
+import ArrowCard from '@/components/ui/ArrowCard.astro'
+import { BLOG } from '@/consts'
+import PageLayout from '@/layouts/PageLayout.astro'
 import { type CollectionEntry, getCollection } from 'astro:content'
 
 const blogPosts = (await getCollection('blog'))
