--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,7 +1,6 @@
 ---
-import BackToPrev from '@/components/BackToPrev.astro'
-import FormattedDate from '@/components/FormattedDate.astro'
 import Container from '@/components/layout/Container.astro'
+import Subheader from '@/components/layout/Subheader.astro'
 import PostStructuredData from '@/components/meta/PostStructuredData.astro'
 import PageLayout from '@/layouts/PageLayout.astro'
 import { readingTime } from '@/lib/utils'
@@ -37,28 +36,20 @@ const tags = post.data.tags || []
   type="article"
   publishedTime={post.data.date}
   tags={tags}
+  isContentPage={true}
 >
   <PostStructuredData slot="structured-data" {...post.data} />
   <Container>
-    <div class="animate">
-      <BackToPrev href="/blog">
-        Back to blog
-      </BackToPrev>
-    </div>
-    <div class="space-y-1 my-10">
-      <div class="animate flex items-center gap-1.5">
-        <div class="font-base text-sm">
-          <FormattedDate date={post.data.date} />
-        </div>
-        &bull;
-        <div class="font-base text-sm">
-          {readingTime(post.body)}
-        </div>
-      </div>
-      <div class="animate text-2xl font-semibold">
-        {title}
-      </div>
-    </div>
+    <Subheader
+      title={title}
+      subtitle={post.data.description}
+      date={post.data.date}
+      readingTime={readingTime(post.body)}
+      isPost={true}
+      backUrl="/blog"
+      backLabel="Back"
+    />
+
     <article class="animate">
       <Content />
     </article>
