--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import GalleryGrid from '@/components/GalleryGrid.astro'
 import Container from '@/components/layout/Container.astro'
+import Subheader from '@/components/layout/Subheader.astro'
 import Link from '@/components/Link.astro'
 import WebsiteStructuredData from '@/components/meta/WebsiteStructuredData.astro'
 import ArrowCard from '@/components/ui/ArrowCard.astro'
@@ -32,9 +33,7 @@ const recentArtwork = (await getCollection('artwork'))
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <WebsiteStructuredData slot="structured-data" />
   <Container>
-    <h4 class="animate font-semibold uppercase">
-      Hello, I'm Chip
-    </h4>
+    <Subheader title="Hello, I'm Chip" />
     <div class="space-y-16">
       <section>
         <article class="space-y-4">
