--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -1,7 +1,6 @@
 ---
-import BackToPrev from '@/components/BackToPrev.astro'
-import FormattedDate from '@/components/FormattedDate.astro'
 import Container from '@/components/layout/Container.astro'
+import Subheader from '@/components/layout/Subheader.astro'
 import Link from '@/components/Link.astro'
 import PostStructuredData from '@/components/meta/PostStructuredData.astro'
 import PageLayout from '@/layouts/PageLayout.astro'
@@ -22,7 +21,8 @@ type Props = CollectionEntry<'projects'>
 const project = Astro.props
 const { Content } = await project.render()
 const title = project.data.showInBlog && project.data.blogTitle ? project.data.blogTitle : project.data.title
-const tags = project.data.tags || [];
+const tags = project.data.tags || []
+const links = project.data.links || []
 ---
 
 <PageLayout
@@ -31,64 +31,21 @@ const tags = project.data.tags || [];
   type="article"
   publishedTime={project.data.date}
   tags={tags}
+  isContentPage={true}
 >
   <PostStructuredData slot="structured-data" {...project.data} />
   <Container>
-    <div class="animate">
-      <BackToPrev href="/projects">
-        Back to projects
-      </BackToPrev>
-    </div>
-    <div class="space-y-1 my-10">
-      <div class="animate flex items-center gap-1.5">
-        <div class="font-base text-sm">
-          <FormattedDate date={project.data.date} />
-        </div>
-        &bull;
-        <div class="font-base text-sm">
-          {readingTime(project.body)}
-        </div>
-      </div>
-      <div class="animate text-2xl font-semibold">
-        {title}
-      </div>
-      {(project.data.demoURL || project.data.repoURL || project.data.projectURLs?.length) && (
-        <nav class="animate flex flex-wrap gap-1">
-          {project.data.demoURL && (
-            <Link
-              href={project.data.demoURL}
-              title="Demo"
-              externalInNewTab={true}
-            >
-              demo
-            </Link>
-          )}
-          {project.data.repoURL && (
-            <>
-              {project.data.demoURL && <span>/</span>}
-              <Link
-                href={project.data.repoURL}
-                title="Repo"
-                externalInNewTab={true}
-              >
-                repo
-              </Link>
-            </>
-          )}
-          {project.data.projectURLs && project.data.projectURLs.map((projectURL, index) => (
-            <>
-              {(project.data.demoURL || project.data.repoURL || index > 0) && <span>/</span>}
-              <Link
-                href={projectURL.url}
-                title={projectURL.label}
-                externalInNewTab={true}
-              >
-                {projectURL.label}
-              </Link>
-            </>
-          ))}
-        </nav>
-      )}
+    <div class="my-10">
+      <Subheader
+        title={title}
+        subtitle={project.data.description}
+        date={project.data.date}
+        readingTime={readingTime(project.body)}
+        isPost={true}
+        links={links}
+        backUrl="/projects"
+        backLabel="Back"
+      />
     </div>
     <article class="animate">
       <Content components={{
